--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,38 @@
   margin: 20px;
 }
 
+.title {
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-wrapper {
+  position: relative;
+  margin: 0 10px; /* Espaçamento entre as imagens */
+}
+
+img {
+  width: 400px;
+  height: 400px;
+  object-fit: cover; /* Garante que a imagem preencha o container sem distorção */
+}
+
+.text-overlay {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: rgb(0, 0, 0);
+  font-size: 1.2rem;
+  text-align: center;
+  background-color: rgb(255, 255, 255);
+  padding: 5px 10px;
+  border-radius: 5px;
+}
